minor code fix & results

--- a/src/to_exel.ipynb
+++ b/src/to_exel.ipynb
@@ -169,6 +169,201 @@
     "\n",
     "df.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import pickle as pkl\n",
+    "import numpy as np\n",
+    "\n",
+    "filename = f'./eeg_data{read_path}/DEAP_{e}_{b}.pkl'\n",
+    "if os.path.exists(filename):\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        res = pkl.load(f)\n",
+    "    acc = np.array(res['accuracy'])[:,1]\n",
+    "    values = np.concatenate(([e, 'Accuracy', b], acc, [np.average(acc), np.std(acc)]), axis=0)\n",
+    "    new_row = dict(zip(col, values))\n",
+    "    df = df.append(new_row, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5338541865348816\n",
+      "[[ 655  452]\n",
+      " [1159 1190]]\n",
+      "0.5925925970077515\n",
+      "[[ 350 1081]\n",
+      " [ 327 1698]]\n",
+      "0.5578703880310059\n",
+      "[[ 836 1054]\n",
+      " [ 474 1092]]\n",
+      "0.5202546119689941\n",
+      "[[1231 1253]\n",
+      " [ 405  567]]\n",
+      "0.5656828880310059\n",
+      "[[970 866]\n",
+      " [635 985]]\n",
+      "0.5960648059844971\n",
+      "[[1471  959]\n",
+      " [ 437  589]]\n",
+      "0.5856481194496155\n",
+      "[[1656 1044]\n",
+      " [ 388  368]]\n",
+      "0.5943287014961243\n",
+      "[[1028  430]\n",
+      " [ 972 1026]]\n",
+      "0.45457175374031067\n",
+      "[[ 824  310]\n",
+      " [1575  747]]\n",
+      "0.5309606194496155\n",
+      "[[1000  296]\n",
+      " [1325  835]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle as pkl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_k-foldCV_unseen_trials_results/DEAP_arousal_beta.pkl\"\n",
+    "# file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_k-foldCV_unseen_trials_results/DEAP_valence_beta.pkl\"\n",
+    "\n",
+    "with open(file, 'rb') as f:\n",
+    "    res = pkl.load(f)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(res['accuracy'][i][1])\n",
+    "    print(res['confusion_matrix'][i])\n",
+    "# df = pd.DataFrame(res['confusion_matrix'][i])\n",
+    "# df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5039351582527161\n",
+      "[[1232 1225]\n",
+      " [ 918  945]]\n",
+      "0.519444465637207\n",
+      "[[1291  653]\n",
+      " [1423  953]]\n",
+      "0.49166667461395264\n",
+      "[[ 891 1620]\n",
+      " [ 576 1233]]\n",
+      "0.494907408952713\n",
+      "[[1218 1428]\n",
+      " [ 754  920]]\n",
+      "0.5277777910232544\n",
+      "[[1468  746]\n",
+      " [1294  812]]\n",
+      "0.5583333373069763\n",
+      "[[2012  445]\n",
+      " [1463  400]]\n",
+      "0.510879635810852\n",
+      "[[1059 1020]\n",
+      " [1093 1148]]\n",
+      "0.5280092358589172\n",
+      "[[1866  537]\n",
+      " [1502  415]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle as pkl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_10-foldCV_unseen_subjects_results/DEAP_arousal_beta.pkl\"\n",
+    "# file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_10-foldCV_unseen_subjects_results/DEAP_valence_beta.pkl\"\n",
+    "\n",
+    "with open(file, 'rb') as f:\n",
+    "    res = pkl.load(f)\n",
+    "\n",
+    "for i in range(8):\n",
+    "    print(res['accuracy'][i][1])\n",
+    "    print(res['confusion_matrix'][i])\n",
+    "# df = pd.DataFrame(res['confusion_matrix'][i])\n",
+    "# df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9872685074806213\n",
+      "[[1930   13]\n",
+      " [  31 1482]]\n",
+      "0.9910300970077515\n",
+      "[[1877   25]\n",
+      " [   6 1548]]\n",
+      "0.9884259104728699\n",
+      "[[1810   34]\n",
+      " [   6 1606]]\n",
+      "0.9780092835426331\n",
+      "[[1851    6]\n",
+      " [  70 1529]]\n",
+      "0.9866898059844971\n",
+      "[[1814    8]\n",
+      " [  38 1596]]\n",
+      "0.9849537014961243\n",
+      "[[1891    5]\n",
+      " [  47 1513]]\n",
+      "0.9924768805503845\n",
+      "[[1863    9]\n",
+      " [  17 1567]]\n",
+      "0.9904513955116272\n",
+      "[[1882   11]\n",
+      " [  22 1541]]\n",
+      "0.9794560074806213\n",
+      "[[1840    0]\n",
+      " [  71 1545]]\n",
+      "0.9317129850387573\n",
+      "[[1842    0]\n",
+      " [ 236 1378]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle as pkl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_10-foldCV_unseen_subjects_results/DEAP_arousal_beta.pkl\"\n",
+    "file = \"/home/hyojinju/multi-channel-eeg-deep-cnn-emotion-recognition/src/eeg_data/DEAP_10-foldCV_results/DEAP_valence_beta.pkl\"\n",
+    "\n",
+    "with open(file, 'rb') as f:\n",
+    "    res = pkl.load(f)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(res['accuracy'][i][1])\n",
+    "    print(res['confusion_matrix'][i])\n",
+    "# df = pd.DataFrame(res['confusion_matrix'][i])\n",
+    "# df.tail()"
+   ]
   }
  ],
  "metadata": {
